Bugfix: "Read this next" and "You might enjoy" links covering the screen
To make this change, instead of declaring the sidebar in the default
template, I had to re-declare it in index, post and page pages.

--- a/CasperSocialSidebarTheme/assets/css/screen.css
+++ b/CasperSocialSidebarTheme/assets/css/screen.css
@@ -2048,6 +2048,11 @@ body:not(.post-template) .post-title {
   float: right;
 }
 
+body.author-template .content {
+  /* on the author page the sidebar is not displayed. Show full content width here. */
+  width:100%;
+}
+
 .sidebar {
   width: 20%;
   float: left;
@@ -2135,6 +2140,10 @@ body:not(.post-template) .post-title {
 
 .poweredby, .copyright {
     display: block;
+}
+
+aside.read-next {
+  clear:both; /* make sure the "read next" suggestions are shown */
 }
 
 /* ==========================================================================
